# Lovejoin

./: .dockerignore  .editorconfig  .env.example  .gitignore  .npmrc  .prettierignore  .prettierrc.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  eslint.config.js  lint-staged.config.mjs  milestones.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.do/: app.yaml  deploy.template.yaml
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh  package.json  tsconfig.json  vitest.config.ts
config/: network.mainnet.json  network.preprod.json  network.test.json
contracts/: README.md  aiken.toml  build.sh  plutus.opt.json
crypto/: README.md
crypto/ref/: Cargo.toml
crypto/ref/src/: bls.rs  dhtuple.rs  hash.rs  lib.rs  schnorr.rs  sigma_or.rs
crypto/ref/tests/: kat.rs
docs/: audit-2026-04-28.md  audit-2026-05-03.md  audit_report.md  deploy.md  m3.5-verification.md  next-redeploy.md  optimization-audit-2026-04-28.md  perf-m4-5-audit.md  perf.md  security-review-v1.md  seedelf.md  test-coverage.md
integration-tests/: README.md  package.json  tsconfig.json  vitest.config.ts
offchain/: README.md  package.json  tsconfig.json  typedoc.json  vitest.config.ts
scripts/: check-reproducibility.sh  diff-onchain-validators.mjs  probe-blockfrost-evaluator.mjs
stress-tests/: README.md  _lib.ts  _mix-helpers.ts  fee-calibration.ts  fuzz-runner.ts  max-n-calibration.ts  package.json
ui/: .dockerignore  .env.example  Dockerfile  (+9 more)
(+398 files in other folders)
